services.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000  # Update targetPort to 5000
  type: LoadBalancer
